ver mas derecho penal

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/estudio-abogado-1.jpg"  class="d-block w-100" alt="...">
+            <img src="img/estudio-abogado-1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/estudio-abogado-2.jpg"  class="d-block w-100 " alt="...">
+            <img src="img/estudio-abogado-2.jpg" class="d-block w-100 " alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/estudio-abogado-3.jpg"  class="d-block w-100 " alt="...">
+            <img src="img/estudio-abogado-3.jpg" class="d-block w-100 " alt="...">
           </div>
           <div class="carousel-item">
-            <img src="img/estudio-abogado-4.jpg"  class="d-block w-100 " alt="...">
+            <img src="img/estudio-abogado-4.jpg" class="d-block w-100 " alt="...">
           </div>
         </div>
 
@@ -133,10 +133,78 @@
           <div class="card h-100 border-0" style="background-color: #f4f4f4">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
+
+                <div class="text-center">
+                  <img src="img/icons/martillo.svg" class="w-100 py-3 m-auto width-servicios" alt="">
+                </div>
+                <h4 class="card-title text-center fs-3">Derecho Penal</h4>
+                <ul id="lista-derecho-penal" class="list-group list-group-flush py-3">
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Robos y hurtos
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Estafas
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Violencia de género
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Tenencia de estupefacientes
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Delitos económicos
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Delitos ambientales
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Delitos sexuales
+                  </li>
+                  <li id="boton-ver-mas-penal" class="list-group-item" style="background-color: #f4f4f4">
+                    <button id="boton-ver-mas-penal-button" type="button">Ver mas...</button>
+                  </li>
+                </ul>
+              </div>
+              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Derecho%20Privado" class="btn btn-dark w-100 ">Contactar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4">
+          <div class="card h-100 border-0" style="background-color: #f4f4f4">
+            <div class="card-body my-3 d-flex flex-column justify-content-between">
+              <div>
+
+                <div class="text-center">
+                  <img src="img/icons/martillo.svg" class="w-100 py-3 m-auto width-servicios" alt="">
+                </div>
+                <h4 class="card-title text-center fs-3">Contratos</h4>
+                <ul class="list-group list-group-flush py-3">
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Ejecución contractual
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Asesoramiento legal en contratos
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cumplimiento de contratos
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Contratos para personas fisicas y empresas
+                  </li>
+                </ul>
+              </div>
+              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Derecho%20Privado" class="btn btn-dark w-100 ">Contactar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4">
+          <div class="card h-100 border-0" style="background-color: #f4f4f4">
+            <div class="card-body my-3 d-flex flex-column justify-content-between">
+              <div>
                 <div class="text-center">
                   <img src="img/icons/autos.svg" class="w-100 py-3 m-auto width-servicios" alt="">
                 </div>
-                <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                <h4 class="card-title text-center fs-3">Derecho Inmobiliario</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños materiales al vehículo o
@@ -201,31 +269,67 @@
               <div>
 
                 <div class="text-center">
-                  <img src="img/icons/martillo.svg" class="w-100 py-3 m-auto width-servicios" alt="">
+                  <img src="img/icons/trabajo.svg" class="w-100 py-3 m-auto width-servicios" alt="">
                 </div>
-                <h4 class="card-title text-center fs-3">Derecho Privado</h4>
-                <ul class="list-group list-group-flush py-3">
+                <h4 class="card-title text-center fs-3 pt-2">Derecho Laboral</h4>
+                <ul class="list-group list-group-flush pb-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Alquileres
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Accidentes de trabajo
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de facturas
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Enfermedades profesionales
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de cheques y otros títulos ejecutivos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Despidos
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Redacción y revisión de contratos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de haberes
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Seguros
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de alquileres y expensas
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i> Envío de telegramas y contestación de
+                    cartas documentos
                   </li>
                 </ul>
               </div>
-              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Derecho%20Privado" class="btn btn-dark w-100 ">Contactar</a>
+              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Derecho%20Laboral" class="btn btn-dark w-100 ">Contactar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4">
+          <div class="card h-100 border-0" style="background-color: #f4f4f4">
+            <div class="card-body my-3 d-flex flex-column justify-content-between">
+              <div>
+                <div class="text-center">
+                  <img src="img/icons/autos.svg" class="w-100 py-3 m-auto width-servicios" alt="">
+                </div>
+                <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                <ul class="list-group list-group-flush py-3">
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños materiales al vehículo o
+                    rodado
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños físicos o psicológicos
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por incapacidad
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
+                  </li>
+                  <li class="list-group-item" style="background-color: #f4f4f4">
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
+                  </li>
+                </ul>
+              </div>
+              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Accidentes%20de%20Transito"
+                class="btn btn-dark w-100 ">Contactar</a>
             </div>
           </div>
         </div>
@@ -263,38 +367,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-6 col-xl-4">
-          <div class="card h-100 border-0" style="background-color: #f4f4f4">
-            <div class="card-body my-3 d-flex flex-column justify-content-between">
-              <div>
 
-                <div class="text-center">
-                  <img src="img/icons/trabajo.svg" class="w-100 py-3 m-auto width-servicios" alt="">
-                </div>
-                <h4 class="card-title text-center fs-3 pt-2">Derecho Laboral</h4>
-                <ul class="list-group list-group-flush pb-3">
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Accidentes de trabajo
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Enfermedades profesionales
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Despidos
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de haberes
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i> Envío de telegramas y contestación de
-                    cartas documentos
-                  </li>
-                </ul>
-              </div>
-              <a href="https://wa.me/2996037510?text=Hola,%20queria%20solicitar%20mas%20informarcion%20sobre%20Derecho%20Laboral" class="btn btn-dark w-100 ">Contactar</a>
-            </div>
-          </div>
-        </div>
 
       </div>
     </section>
@@ -418,6 +491,7 @@
   </footer>
 
   <script src="js/nav-color.js"></script>
+  <script src="js/agregar-items-penal.js"></script>
 
 </body>
 
