--- a/index.html
+++ b/index.html
@@ -210,26 +210,19 @@
                 <h4 class="card-title text-center fs-3">Derecho Inmobiliario</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños materiales al vehículo o
-                    rodado
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Divisiones de condominio
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños físicos o psicológicos
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Desalojos y defensa de la propiedad
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por incapacidad
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Juicios de usucapión - prescripción adquisitiva
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Juicios de escrituración
                   </li>
                   <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
-                  </li>
-                  <li class="list-group-item" style="background-color: #f4f4f4">
-                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
+                    <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Asesoramiento en desarrollos inmobiliarios
                   </li>
                 </ul>
               </div>
@@ -306,7 +299,7 @@
                 <div class="text-center">
                   <img src="img/icons/autos.svg" class="w-100 py-3 m-auto width-servicios" alt="">
                 </div>
-                <h4 class="card-title text-center fs-3">Accidentes de tránsito</h4>
+                <h4 class="card-title text-center fs-3">Accidentes de Tránsito</h4>
                 <ul class="list-group list-group-flush py-3">
                   <li class="list-group-item" style="background-color: #f4f4f4">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños materiales al vehículo o
