dark mode avances

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -104,10 +102,10 @@
       </div>
     </section>
 
-    <section id="quienes-somos" class="container pb-5">
-      <div class="row">
+    <section id="quienes-somos" class="container-fluid py-5 fondo-dark">
+      <div class="row container m-auto">
         <div class="col-12 col-lg-6 d-flex flex-column justify-content-center">
-          <h2 class="titulo titulo-grande text-white text-white">Quienes somos</h2>
+          <h2 class="titulo titulo-grande text-white text-white subrayado-titulo">Quienes somos</h2>
           <div class="fs-5 text-white">
             <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en la
               confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y oportuna de
@@ -125,12 +123,12 @@
       </div>
     </section>
 
-    <section id="nuestros-servicios" class="container pb-5">
-      <h2 class="titulo titulo-grande text-white">Nuestros Servicios</h2>
+    <section id="nuestros-servicios" class="container py-5">
+      <h2 class="titulo titulo-grande text-white subrayado-titulo">Nuestros Servicios</h2>
       <h3 class="titulo text-white">Atendemos en Neuquén Capital</h3>
       <div class="row g-4 d-flex justify-content-center">
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card text-bg-dark h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -139,29 +137,29 @@
                 </div>
                 <h4 class="card-title text-center fs-3">Derecho Penal</h4>
                 <ul id="lista-derecho-penal" class="list-group list-group-flush py-3">
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Robos y hurtos
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Estafas
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Violencia de género
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Tenencia de estupefacientes
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Delitos económicos
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Delitos ambientales
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Delitos sexuales
                   </li>
-                  <li id="boton-ver-mas-penal" class="list-group-item text-bg-dark">
-                    <button id="boton-ver-mas-penal-button" type="button">Ver mas...</button>
+                  <li id="boton-ver-mas-penal" class="list-group-item fondo-dark text-white">
+                    <span id="boton-ver-mas-penal-button" class="clickeable" type="button">Ver mas...</span>
                   </li>
                 </ul>
               </div>
@@ -171,7 +169,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card text-bg-dark h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -180,16 +178,16 @@
                 </div>
                 <h4 class="card-title text-center fs-3">Contratos</h4>
                 <ul class="list-group list-group-flush py-3">
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Ejecución contractual
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Asesoramiento legal en contratos
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cumplimiento de contratos
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Contratos para personas fisicas y empresas
                   </li>
                 </ul>
@@ -200,7 +198,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card text-bg-dark h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
                 <div class="text-center">
@@ -208,19 +206,19 @@
                 </div>
                 <h4 class="card-title text-center fs-3">Derecho Inmobiliario</h4>
                 <ul class="list-group list-group-flush py-3">
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Divisiones de condominio
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Desalojos y defensa de la propiedad
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Juicios de usucapión - prescripción adquisitiva
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Juicios de escrituración
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Asesoramiento en desarrollos inmobiliarios
                   </li>
                 </ul>
@@ -231,7 +229,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card text-bg-dark h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -240,16 +238,16 @@
                 </div>
                 <h4 class="card-title text-center fs-3">Derecho de Familia</h4>
                 <ul class="list-group list-group-flush py-3">
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Alimentos
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Régimen de visitas
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Divorcios
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Homologaciones de acuerdo
                   </li>
               </div>
@@ -259,7 +257,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card text-bg-dark h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -268,19 +266,19 @@
                 </div>
                 <h4 class="card-title text-center fs-3 pt-2">Derecho Laboral</h4>
                 <ul class="list-group list-group-flush pb-3">
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Accidentes de trabajo
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Enfermedades profesionales
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Despidos
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cobro de haberes
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i> Envío de telegramas y contestación de
                     cartas documentos
                   </li>
@@ -292,7 +290,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card text-bg-dark h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
                 <div class="text-center">
@@ -300,26 +298,26 @@
                 </div>
                 <h4 class="card-title text-center fs-3">Accidentes de Tránsito</h4>
                 <ul class="list-group list-group-flush py-3">
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños materiales al vehículo o
                     rodado
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Reclamos por daños físicos o psicológicos
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por incapacidad
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Incapacidad total
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Invalidez
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por muerte
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Indemnizaciones por secuelas
                   </li>
                 </ul>
@@ -330,7 +328,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card text-bg-dark h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -339,22 +337,22 @@
                 </div>
                 <h4 class="card-title text-center fs-3">Sucesiones</h4>
                 <ul class="list-group list-group-flush py-3">
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Declaratoria de herederos
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Partición de bienes
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Costo y duración del trámite
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Acuerdo entre herederos
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Cesión de derechos hereditarios
                   </li>
-                  <li class="list-group-item text-bg-dark">
+                  <li class="list-group-item fondo-dark text-white">
                     <i class="bi bi-chevron-double-right pe-2 text-gold"></i>Venta de inmuebles y muebles
                   </li>
                 </ul>
@@ -369,9 +367,11 @@
       </div>
     </section>
 
-    <section id="honorarios" class="container pb-5">
-      <div class="row g-5">
-        <h2 class="titulo titulo-grande text-white">Honorarios</h2>
+    <section id="honorarios" class="container-fluid py-5 fondo-dark">
+      <div class="row g-5 container m-auto">
+        <div>
+          <h2 class="titulo titulo-grande text-white subrayado-titulo">Honorarios</h2>
+        </div>
         <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
           <div class="fondo-gold py-4 text-center  rounded-3 mb-1">
             <span class="text-white fs-3 fw-bold">Gastos Iniciales Bonificados</span>
@@ -409,10 +409,12 @@
       </div>
     </section>
 
-    <section id="contacto" class="container pb-5">
+    <section id="contacto" class="container py-5">
       <div class="row">
         <div class="col-12 col-md-6 py-3 text-white">
-          <h2 class="pb-3 titulo titulo-grande text-white">Contacto</h2>
+          <div class="pb-3">
+            <h2 class="titulo titulo-grande text-white subrayado-titulo">Contacto</h2>
+          </div>
           <p>Matías Nordenstrom Estudio Jurídico</p>
           <p>Mendoza 1150, Neuquén</p>
           <p>Telefono: (299) 603-7510</p>
