--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 
+  <!-- CSS Animate -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -94,7 +96,7 @@
       </div>
 
       <div class="py-4 fondo-dark" style="border-radius: 0px 0px 4px 4px;">
-        <p class="fs-3 px-5 fst-italic text-center text-white">
+        <p class="fs-3 px-5 fst-italic text-center text-white animate__animated animate__fadeIn animate__slow">
           En el Estudio Jurídico Nordenstrom la seriedad y la responsabilidad en la realización de nuestras tareas es
           una nota que nos caracteriza, y de la que pueden dar fe quienes ya cuentan con nuestros servicios
           profesionales
@@ -106,18 +108,15 @@
       <div class="row container m-auto">
         <div class="col-12 col-lg-6 d-flex flex-column justify-content-center">
           <h2 class="titulo titulo-grande text-white text-white subrayado-titulo">Quienes somos</h2>
-          <div class="fs-5 text-white">
+          <div class="fs-5 text-white animate__animated animate__fadeInLeft animate__slow">
             <p>Somos un estudio jurídico caracterizado por brindar una asesoría legal personalizada, basada en la
               confianza y eficiencia de nuestros servicios, buscando ante todo la solución rápida, directa y oportuna de
               cualquier tipo de controversia o contingencia que puedan experimentar nuestros clientes.</p>
             <p>Nos esforzamos para representar a nuestros clientes de la mejor manera posible, tanto en la instancia
               extrajudicial, como judicialmente.</p>
           </div>
-          <!-- <div class="d-flex justify-content-end">
-            <button type="button" class="btn btn-dark px-5">Conozca más</button>
-          </div> -->
         </div>
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-6 animate__animated animate__fadeIn animate__slow">
           <img class="w-100 rounded-1" src="img/martillo-esposa.jpg" alt="">
         </div>
       </div>
@@ -128,7 +127,7 @@
       <h3 class="titulo text-white">Atendemos en Neuquén Capital</h3>
       <div class="row g-4 d-flex justify-content-center">
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card fondo-dark text-white h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0 animate__animated animate__fadeIn animate__slow" data-aos="fade-up">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -169,7 +168,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card fondo-dark text-white h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0 animate__animated animate__fadeIn animate__slow" data-aos="fade-up">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -198,7 +197,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card fondo-dark text-white h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0 animate__animated animate__fadeIn animate__slow" data-aos="fade-up">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
                 <div class="text-center">
@@ -229,7 +228,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card fondo-dark text-white h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0 animate__animated animate__fadeIn animate__slow" data-aos="fade-up">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -257,7 +256,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card fondo-dark text-white h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0 animate__animated animate__fadeIn animate__slow" data-aos="fade-up">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -290,7 +289,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card fondo-dark text-white h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0 animate__animated animate__fadeIn animate__slow" data-aos="fade-up">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
                 <div class="text-center">
@@ -328,7 +327,7 @@
           </div>
         </div>
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card fondo-dark text-white h-100 border-0">
+          <div class="card fondo-dark text-white h-100 border-0 animate__animated animate__fadeIn animate__slow" data-aos="fade-up">
             <div class="card-body my-3 d-flex flex-column justify-content-between">
               <div>
 
@@ -372,7 +371,7 @@
         <div>
           <h2 class="titulo titulo-grande text-white subrayado-titulo">Honorarios</h2>
         </div>
-        <div class="col-12 col-md-6 d-flex flex-column justify-content-center">
+        <div class="col-12 col-md-6 d-flex flex-column justify-content-center animate__animated animate__fadeInLeft animate__slow">
           <div class="fondo-gold py-4 text-center  rounded-3 mb-1">
             <span class="text-white fs-3 fw-bold">Gastos Iniciales Bonificados</span>
           </div>
@@ -381,7 +380,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 text-white">
+        <div class="col-12 col-md-6 text-white animate__animated animate__fadeInRight animate__slow">
           <p class="fs-4">Se bonifica el importe de la primera consulta al iniciar el trámite con nosotros.</p>
           <hr>
           <p class="fs-4">Ponemos a disposición de nuestros clientes una amplia variedad de planes de pago para abonar
@@ -403,7 +402,7 @@
             </div>
           </div>
         </div>
-        <p class="text-center pt-5 text-white">Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán
+        <p class="text-center pt-5 text-white animate__animated animate__fadeIn animate__slow">Los estudios juridicos regulan sus honorarios segun el valor del IUS, que podrán
           encontrarlo publicado en los colegios de abogados de cada provincia. Si tienen alguna consulta, no duden en
           comunicarse con nosotros para asesorarse.</p>
       </div>
@@ -500,6 +499,7 @@
 
   <script src="js/nav-color.js"></script>
   <script src="js/agregar-items-penal.js"></script>
+  <script src="js/animaciones.js"></script>
 
 </body>
 
