--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
   <!-- CSS Animate -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
+  <!-- SMTP JS -->
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
