--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <!-- CSS Animate -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 
 <body>
@@ -464,7 +465,7 @@
               <label class="text-white" for="mensaje">Mensaje</label>
             </div>
             <div class="d-flex justify-content-end">
-              <button type="submit" class="btn btn-dark px-4 boton-dorado">Enviar</button>
+              <button type="submit" class="btn btn-dark px-4 boton-dorado" onclick="enviarCorreo()">Enviar</button>
             </div>
           </form>
         </div>
@@ -511,8 +512,7 @@
                 class="bi bi-instagram"></i></a>
             <a class="nav-link fs-3 pe-4" href="https://www.facebook.com/matias.nordenstrom.56"><i
                 class="bi bi-facebook"></i></a>
-            <a class="nav-link fs-3"
-              href="https://www.linkedin.com/in/matias-ezequiel-correa-nordenstrom-a78083154"><i
+            <a class="nav-link fs-3" href="https://www.linkedin.com/in/matias-ezequiel-correa-nordenstrom-a78083154"><i
                 class="bi bi-linkedin"></i></a>
           </div>
 
@@ -521,6 +521,7 @@
     </div>
   </footer>
 
+  <script src="js/enviarCorreo.js"></script>
   <script src="js/nav-color.js"></script>
   <script src="js/agregar-items-penal.js"></script>
   <script src="js/animaciones.js"></script>
