--- a/index.html
+++ b/index.html
@@ -448,20 +448,22 @@
           <h3 class="pb-3 titulo text-white">Envia tu mensaje</h3>
           <form action="">
             <div class="form-floating mb-3">
-              <input type="text" class="form-control bg-dark" id="nombre" placeholder="Maria" required>
+              <input type="text" class="form-control bg-dark text-white" id="nombre" placeholder="Maria" required>
               <label class="text-white" for="nombre">Nombre</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="email" class="form-control bg-dark" id="email" placeholder="name@example.com" required>
+              <input type="email" class="form-control bg-dark text-white" id="email" placeholder="name@example.com"
+                required>
               <label class="text-white" for="email">Email</label>
             </div>
             <div class="form-floating mb-3">
-              <input type="text" class="form-control bg-dark" id="telefono" placeholder="299 1111111" required>
+              <input type="text" class="form-control bg-dark text-white" id="telefono" placeholder="299 1111111"
+                required>
               <label class="text-white" for="telefono">Telefono</label>
             </div>
             <div class="form-floating mb-3">
-              <textarea class="form-control bg-dark" id="mensaje" placeholder="Su mensaje" style="height: 100px"
-                required></textarea>
+              <textarea class="form-control bg-dark text-white" id="mensaje" placeholder="Su mensaje"
+                style="height: 100px" required></textarea>
               <label class="text-white" for="mensaje">Mensaje</label>
             </div>
             <div class="d-flex justify-content-end">
