--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
         </div>
         <div class="col-12 col-md-6 py-3">
           <h3 class="pb-3 titulo text-white">Envia tu mensaje</h3>
-          <form action="mailto:webdevelopment.ag@gmail.com" method="POST">
+          <form id="formulario">
             <div class="form-floating mb-3">
               <input type="text" class="form-control bg-dark text-white" id="nombre" name="nombre" placeholder="Maria"
                 required>
@@ -468,9 +468,11 @@
               <label class="text-white" for="mensaje">Mensaje</label>
             </div>
             <div class="d-flex justify-content-end">
-              <button type="submit" class="btn btn-dark px-4 boton-dorado" >Enviar</button>
+              <button id="boton-submit" type="submit" class="btn btn-dark px-4 boton-dorado">Enviar</button>
             </div>
           </form>
+        
+
         </div>
       </div>
 
