desarrollado por, redes hover

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         <div class="col-12 col-md-4 text-center text-md-start">
           <h3 class="pb-3 titulo text-gold">REDES</h3>
 
-          <div class="d-flex justify-content-center justify-content-md-start">
+          <div id="redes" class="d-flex justify-content-center justify-content-md-start">
             <a class="nav-link fs-3 pe-4" href="https://wa.me/2996037510"><i class="bi bi-whatsapp"></i></a>
             <a class="nav-link fs-3 pe-4" href="https://www.instagram.com/abogadosneuquen_nyj/"><i
                 class="bi bi-instagram"></i></a>
@@ -518,6 +518,9 @@
 
         </div>
       </div>
+    </div>
+    <div class="text-center text-white">
+      <span>Desarrollado por <a href="https://www.instagram.com/ag_webdevelopment/" class="text-gold">AG WebDevelopment</a></span></a>
     </div>
   </footer>
 
