--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
     <!-- Boton Whatsapp -->
     <div class="container-wa">
       <div class="floating-button">
-        <a target="_blank" href="https://wa.me/2996037510?text=I'm%20interested%20in%20your%20car%20for%20sale"
+        <a target="_blank" href="https://wa.me/2996037510"
           id="icono-whatsapp">
           <i class="bi bi-whatsapp icon wa text-white"></i>
         </a>
